Removing scroll bars and fixing some behavior bugs on safari and chrome.

--- a/index.css
+++ b/index.css
@@ -12,6 +12,7 @@ body {
   margin: 0;
   padding-bottom: 20px;
   cursor: text;
+  overflow: hidden;
 }
 
 textarea,
